# Prism

./: .env.example  .gitignore  AGENTS.md  AGENTS.zh-CN.md  Dockerfile  README.md  README.zh-CN.md  ai_service.py  config.py  desktop_logging.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  runtime_paths.py  server.py  skills-lock.json  tools.json  tools.py
ai/: __init__.py  chat_service.py  models.py  providers.py  stream_parser.py
ai/builders/: __init__.py  message_builder.py  prompt_renderer.py  tool_mapper.py
ai/compat/: __init__.py  grok2api_stream_adapter.py
ai/parsers/: __init__.py  anthropic.py  common.py  gemini.py  openai_chat.py  openai_responses.py
ai/providers/: __init__.py  anthropic.py  base.py  gemini.py  openai.py  registry.py
ai/services/: __init__.py  chat_orchestrator.py  model_service.py  topic_service.py
docs/: AGENTS.zh-CN.md  BUG-DEV-JS-ASSET-VERSION-LOOP.md  BUG-EXA-SELECTOR-HIGHLIGHT.md  BUG-MOBILE-BUTTON-HOVER-STICKY.md  FEATURE-REGENERATE-BUTTON.md  GEMINI_PLAN.md  MULTI-CONFIG-IMPLEMENTATION-PLAN.md  README.zh-CN.md  RESPONSES_PLAN.md  refactor-ai-service.md  refactor-server.md
frontend/: app.js  index.html  style.css
frontend/css/: base.css  buttons.css  chat.css  composer.css  config.css  content.css  header.css  html-preview.css  images.css  layout.css  message-assistant.css  responsive.css  sidebar.css  sources.css  thinking.css  tools.css  topics.css  web-search.css
frontend/js/: chat.js  config.js  (+16 more)
routes/: chat.py  html_preview.py  models.py  proxy.py  responses.py  search.py  static.py  tools.py  topics.py
scripts/: build-tauri-windows.ps1  dev-tauri-windows.ps1  generate_prism_icons.py  rebuild-desktop-dev-windows.ps1  reset-desktop-dev-windows.ps1
src-tauri/: Cargo.toml  build.rs  installer-hooks.nsh  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
tests/: test_header_model_layout.py
(+8 files in other folders)
