[package]
name = "prism_desktop"
version = "0.5.3"
description = "Prism desktop client powered by Tauri"
authors = ["Prism"]
edition = "2021"
default-run = "prism_desktop"

[lib]
name = "prism_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-shell = "2.3.5"
tauri-plugin-single-instance = "2"
